# pythresholds

./: .gitignore  README.md  pyproject.toml
src/temperature_thresholds/: cli.py  smoothing.py  trend_plotting.py
